k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heritage
  labels:
    app.kubernetes.io/part-of: heritage-splitter
